<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RunTracker</string>
    <string name="started">Iniciado:</string>
    <string name="latitude">Latitud:</string>
    <string name="longitude">Longitud:</string>
    <string name="altitude">Altitud:</string>
    <string name="elapsed_time">Tiempo transcurrido:</string>
    <string name="start">Iniciar</string>
    <string name="stop">Detener</string>
    <string name="gps_enabled">GPS abilitado</string>
    <string name="gps_disabled">GPS Des-abilitado</string>
    <string name="cell_text">Corrida en %1$s</string>
    <string name="new_run">Agregar viaje</string>
    <string name="tracking_message">Servicio de rastreo activo</string>
    <string name="map">Mapa</string>
    <string name="run_start">Inicio</string>
    <string name="run_started_at_format">Viaje inició en %s</string>
    <string name="run_finish">Fin</string>
    <string name="run_finished_at_format">Viaje terminó en %s</string>
</resources>
